--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,21 @@
         tools:replace="android:theme, android:roundIcon"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.CrimesSexuaisLeisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.PessoasPretasLeisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.LgbtLeisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.MulheresLeisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.DireitosApoioLeisActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.AdminActivity"
             android:exported="false" />
         <activity
